Opened 16 years ago
Closed 16 years ago
#4002 closed bug (fixed)
volume control replicant does not function after reboot
Reported by: | agildehaus | Owned by: | marcusoverhagen |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Media Kit | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
A working volume control replicant placed on the desktop does not function after a reboot; all controls are disabled and the text "No Mixer" is displayed.
I might tackle this one myself as I want to start contributing patches, but I'd welcome someone to beat me to it :)
Note:
See TracTickets
for help on using tickets.
If you restart Tracker (open a Terminal, type hey Tracker quit, type /system/Tracker &), does the replicant suddenly work? If so it sounds like the timing between launching Tracker and media_server during boot could be the problem. Then you just need to add "polling" to the replicant. In another words, it would recheck the availability of the BMediaRoster from time to time until it is there. You could do this for example with a BMessageRunner that sends a message about every 2 seconds which causes the replicant to re-run the code that connects to the media_server.