* With the help of Stippi's "I Will Survive" article, the VolumeControl   replicant should now handle media server restarts, or late starts gracefully. * This fixed ticket #4002.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@31322 a95241bf-73f2-0310-859d-f6bbb57e9c96